--- a/api-reservations/src/test/resources/application.yml
+++ b/api-reservations/src/test/resources/application.yml
@@ -47,7 +47,7 @@ spring:
     password: muppet
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     show-sql: true
 
   flyway:
