--- a/api-reservations/src/test/resources/application.yml
+++ b/api-reservations/src/test/resources/application.yml
@@ -48,6 +48,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+    properties:
+      hibernate:
+        enable_lazy_load_no_trans: true
     show-sql: true
 
   flyway:
